# LIDAR-Plane-Detection

./: 64HDL_S2.yaml  Normal Visualizations.ipynb  Plane Detection.ipynb  csv_to_ply.py  detect_multiple.py  detection_play.py  plane_detection.py  show_colors.py  surface-normal-using-depths.ipynb
cpp/: CMakeLists.txt
pcl_normals/: CMakeLists.txt
pcl_normals/src/: get_normals.cpp
